# demo

./: .gitignore  AGENTS.md  CLAUDE.md
.openspec/archived/001-self-update/: proposal.md  tasks.md
.openspec/archived/001-updater-helper/: proposal.md  tasks.md
.openspec/archived/002-simplify-self-update/: proposal.md  tasks.md
AGENTS/: AGENTS.md  CLAUDE.md  GEMINI.md
program_updater/: Cargo.toml  build.rs
program_updater/src/: config.rs  lib.rs  main.rs  self_update.rs  updater.rs
rust-modules/: README.md  cmd_config.rs  command.rs  ctrl_c.rs  datetime.rs  env_config.rs  file_watcher.rs  log.rs  progress.rs  serial.rs  sysinfo.rs  toml_config.rs
rust-modules/crypto/: aes.rs  config.rs  hash.rs  mod.rs  rsa.rs
rust-modules/http/: client.rs  config.rs  mod.rs  server.rs
rust-modules/json_config/: mod.rs
rust-modules/tcp/: client.rs  config.rs  mod.rs  protocol.rs  server.rs
rust-modules/udp/: client.rs  config.rs  mod.rs  server.rs
rust-modules/websocket/: client.rs  config.rs  mod.rs  server.rs
