[package]
name = "program_updater"
version = "0.1.0"
edition = "2024"

[dependencies]

#图标
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

#共享库（供两个bin使用）
[lib]
name = "program_updater"
path = "src/lib.rs"

#主程序
[[bin]]
name = "program_updater"
path = "src/main.rs"

#更新助手程序
[[bin]]
name = "updater_helper"
path = "src/bin/updater_helper.rs"
